--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<h1> Title lol :3 </h1>
 
 <body>
     <p>This is a minimal HTML page where some random stuff will be hosted/written</p>
