--- a/index.html
+++ b/index.html
@@ -4,3 +4,14 @@
 <body>
     <p>This is a minimal HTML page where some random stuff will be hosted/written</p>
 </body>
+
+<h2> Whoami</h2>
+
+<body>
+    <p>I am pretty bad at most things, but im trying to learn:
+    <ul>
+        <li>HTML</li>
+    </ul>
+    </p>
+
+</body>
