added bulletpoints and more things

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 <h2> Whoami</h2>
 
 <body>
-    <p>I am pretty bad at most things, but im trying to learn:
-    <ul>
-        <li>HTML</li>
-    </ul>
+    <p>
+        <li>I am a random person who is trying to learn some stuff, and this is my first attempt at making a website.
+        </li>
     </p>
 
-</body>
+    <body>
+        <p>I am pretty bad at most things, but im trying to learn:
+        <ul>
+            <li>HTML</li>
+            <li>(python)</li>
+            <li>Nix(OS)</li>
+            <li></li>
+        </ul>
+        </p>
+
+    </body>
