added some links

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             <li>HTML</li>
             <li>(python)</li>
             <li>Nix(OS)</li>
-            <li></li>
+            <li>Routing and Networking</li>
         </ul>
         </p>
-
+        <p>If you want to read smt:
+            <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a>
+            <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a>
+            </a>
+        </p>
     </body>
