bullet points for the links

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </ul>
         </p>
         <p>If you want to read smt:
-            <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a>
+            <li><a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
         </p>
         <p>
-            <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a>
+            <li><a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
             </a>
         </p>
     </body>
