added some verify things

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <p>If you want to read smt:
         </p>
         <p>
-            <li><a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
+            <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
         </p>
         <p>
-            <li><a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
+            <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
             </a>
         </p>
     </body>
+    <a rel="me" href="https://kommunismus.social/@marie">Mastodon</a>
