added contact info

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             <li>Nix(OS)</li>
             <li>Routing and Networking</li>
         </ul>
+        <p>
+        <h3>Opinions</h3>
+        <p>
+            <li></li>
+        </p>
+        </p>
         </p>
         <p>If you want to read smt:
         </p>
@@ -31,5 +37,6 @@
             <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
             </a>
         </p>
+        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p>
     </body>
     <a rel="me" href="https://kommunismus.social/@marie">Mastodon</a>
