added laptop config

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
             <li>Routing and Networking</li>
         </ul>
         <p>
-        <h3>Opinions</h3>
+        <h3>About my Laptop</h3>
         <p>
-            <li></li>
+            OS: NixOS
+            DE: Gnome
+            Browser: Firefox
+            Editor: vscode
+            My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a>
         </p>
         </p>
         </p>
