added laptop hardware config

--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
         <p>
         <h3>About my Laptop</h3>
         <p>
-            OS: NixOS
-            DE: Gnome
-            Browser: Firefox
-            Editor: vscode
-            My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a>
+        <h4>Software</h4>
+        OS: NixOS
+        DE: Gnome
+        Browser: Firefox
+        Editor: vscode
+        My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a>
+        <h5>Hardware</h5>
+        <p>Framework Laptop 13
+            Intel i5-1240P
+            16GB DDR4
+            1TB NVMe
+            Pink Bezel
+        </p>
         </p>
         </p>
         </p>
