--- a/index.html
+++ b/index.html
@@ -9,38 +9,34 @@
 
 <body>
     <p>
-        <li>I am a random person who is trying to learn some stuff, and this is my first attempt at making a website.
+        <li>idk i dont even know who i am
         </li>
     </p>
 
     <body>
-        <p>I am pretty bad at most things, but im trying to learn:
-        <ul>
-            <li>HTML</li>
-            <li>(python)</li>
-            <li>Nix(OS)</li>
-            <li>Routing and Networking</li>
-        </ul>
         <p>
-        <h3>About my Laptop</h3>
+        <h2>About my Laptop</h2>
         <p>
-        <h4>Software</h4>
-        OS: NixOS
-        DE: Gnome
-        Browser: Firefox
-        Editor: vscode
-        My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a>
-        <h5>Hardware</h5>
-        <p>Framework Laptop 13
-            Intel i5-1240P
-            16GB DDR4
-            1TB NVMe
-            Pink Bezel
+        <h3>Software</h3>
+        OS: NixOS <br>
+        DE: Gnome <br>
+        Browser: Firefox <br>
+        Editor: vscode <br>
+        My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a> <br>
+        <h3>Hardware</h3>
+        <p>Framework Laptop 13 <br>
+            Intel i5-1240P <br>
+            16GB DDR4 <br>
+            1TB NVMe <br>
+            Pink Bezel <br>
         </p>
         </p>
         </p>
         </p>
-        <p>If you want to read smt:
+        <p>
+        <h2>
+            If you want to read smt:
+        </h2>
         </p>
         <p>
             <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
