--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </p>
         </p>
         <p>
+        <h2>Social Media</h2>
+        twitter:<a href="https://twitter.com/pilz1312">@pilz1312</a> <br>
+        mastodon:<a href="https://kommunismus.social/@marie">@marie</a> <br>
+        </p>
+        <p>
         <h2>
             If you want to read smt:
         </h2>
@@ -45,6 +50,6 @@
             <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
             </a>
         </p>
-        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p>
+        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p> <br>
+        <p>I hate electron</p> <br>
     </body>
-    <a rel="me" href="https://kommunismus.social/@marie">Mastodon</a>
