added skill icon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <li>idk i dont even know who i am
         </li>
     </p>
+    <p>
+    <h2>Skills</h2>
+    </p>
+    <p> <a href="https://skillicons.dev">
+            <img src="https://skillicons.dev/icons?i=git,nix,vscode" />
+        </a>
+    </p>
+    </p>
 
     <body>
         <p>
