added "linux iso" guide

--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
     <p>
     <h2>Skills</h2>
     </p>
-    <p> <a href="https://skillicons.dev">
-            <img src="https://skillicons.dev/icons?i=git,nix,vscode" />
+    <p> <a <img src="https://skillicons.dev/icons?i=git,nix,vscode" />
         </a>
     </p>
+    </p>
+    <p>
+    <h2>How to torrent "linux ISOs"</h2> <br>
+    Install <a href="https://www.qbittorrent.org/">qbittorrent</a> <br>
+    Find a VPN Provider that is fine with Torrenting<br>
+    Install a VPN Client (OpenVPN, Wireguard, etc.)<br>
+    Enable the qbittorrent search and install the <a
+        href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search Plugins</a>
+    Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN Interface
+    <br>
+    Done! Now you can download "linux ISOs" without any problems! <br>
+    <br>
+
     </p>
 
     <body>
@@ -58,6 +70,6 @@
             <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
             </a>
         </p>
-        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p> <br>
+        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
         <p>I hate electron</p> <br>
     </body>
