--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <p>
     <h2>Skills</h2>
     </p>
-    <p> <a <img src="https://skillicons.dev/icons?i=git,nix,vscode" />
-        </a>
+    <p> <a <img src="https://skillicons.dev/icons?i=git,nix,vscode" alt="git, nix, vscode" /> </a> </p>
+    </a>
     </p>
     </p>
     <p>
@@ -30,7 +30,6 @@
     <br>
     Done! Now you can download "linux ISOs" without any problems! <br>
     <br>
-
     </p>
 
     <body>
