fixed it fr this time

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <p>
     <h2>Skills</h2>
     </p>
-    <p> <a <img src="https://skillicons.dev/icons?i=git,nix,vscode" alt="git, nix, vscode" /> </a> </p>
-    </a>
-    </p>
+    <p <a href="https://skillicons.dev">
+        <img src="https://skillicons.dev/icons?i=git,nix,windows" />
+        </a>
     </p>
     <p>
     <h2>How to torrent "linux ISOs"</h2> <br>
