added exmple vpns

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>
     <h2>How to torrent "linux ISOs"</h2> <br>
     Install <a href="https://www.qbittorrent.org/">qbittorrent</a> <br>
-    Find a VPN Provider that is fine with Torrenting<br>
+    Find a VPN Provider that is fine with Torrenting (eg. Mullvad, Airvpn, Proton etc...)<br>
     Install a VPN Client (OpenVPN, Wireguard, etc.)<br>
     Enable the qbittorrent search and install the <a
         href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search Plugins</a>
