--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <h1> Title lol :3 </h1>
-
 <body>
     <p>This is a minimal HTML page where some random stuff will be hosted/written</p>
 </body>
@@ -31,7 +30,8 @@
     Done! Now you can download "linux ISOs" without any problems! <br>
     <br>
     </p>
-
+<p><h2> Why Static HTML??? use wordpress????????</h2></p>
+<p> Bloat=bad and also im to lazy :3</p>
     <body>
         <p>
         <h2>About my Laptop</h2>
