--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     Install <a href="https://www.qbittorrent.org/">qbittorrent</a> <br>
     Find a VPN Provider that is fine with Torrenting (eg. Mullvad, Airvpn, Proton etc...)<br>
     Install a VPN Client (OpenVPN, Wireguard, etc.)<br>
-    Enable the qbittorrent search and install the <a
+    Enable the qbittorrent search and install the <a>
         href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search Plugins</a>
     Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN Interface
     <br>
@@ -72,22 +72,16 @@
         <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
         <p><h2>The shittyest and cheapest Statuspage</h2></p>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a957482c0" target="_blank" title="Weitere Statistiken für 64285-b_rowlan"></a>
-        <img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a957482c0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=c4e984f607de" target="_blank" title="Weitere Statistiken für 64295-Linkstreff"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=c4e984f607de&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
-        <img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=c4e984f607de&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=fcecda15b3c6" target="_blank" title="Weitere Statistiken für 64289-oetingervilla3"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=fcecda15b3c6&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
-        <img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=fcecda15b3c6&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a95749b68" target="_blank" title="Weitere Statistiken für 64289-oetingervilla4"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a95749b68&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
-        <img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a95749b68&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=0c0e766d8bc0" target="_blank" title="Weitere Statistiken für 64289-oetingervilla-saal-PoE"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=0c0e766d8bc0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
-        <img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=0c0e766d8bc0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
     <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=b8eca3e12daf" target="_blank" title="Weitere Statistiken für 64289-_ttingerVillaOutdoor______"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=b8eca3e12daf&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
-        <img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=b8eca3e12daf&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
         </a>
         <p>I hate electron</p> <br>
     </body>
