--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
         <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
         <p><h2>The shittyest and cheapest Statuspage</h2></p>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a957482c0" target="_blank" title="Weitere Statistiken für 64285-b_rowlan">
+        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a957482c0" target="_blank" title="Weitere Statistiken für 64285-b_rowlan"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a957482c0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=c4e984f607de" target="_blank" title="Weitere Statistiken für 64295-Linkstreff"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=c4e984f607de&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
