--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <h2>How to torrent "linux ISOs"</h2> <br>
     Install <a href="https://www.qbittorrent.org/">qbittorrent</a> <br>
     Find a VPN Provider that is fine with Torrenting (eg. Mullvad, Airvpn, Proton etc...)<br>
-    Install a VPN Client (OpenVPN, Wireguard, etc.)<br>
+    Install a VPN Client (OpenVPN, Wireguard, etc.) and config it for your VPN<br>
     Enable the qbittorrent search and install the <a>
-        href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search Plugins</a>
+        <a href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search Plugins</a> <br>
     Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN Interface
     <br>
     Done! Now you can download "linux ISOs" without any problems! <br>
@@ -81,7 +81,7 @@
     </a>
         <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=0c0e766d8bc0" target="_blank" title="Weitere Statistiken für 64289-oetingervilla-saal-PoE"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=0c0e766d8bc0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
-    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=b8eca3e12daf" target="_blank" title="Weitere Statistiken für 64289-_ttingerVillaOutdoor______"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=b8eca3e12daf&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=b8eca3e12daf" target="_blank" title="Weitere Statistiken für 64289-_ttingerVillaOutdoor______"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=b8eca3e12daf&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
         <p>I hate electron</p> <br>
     </body>
