added about Server

--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
         </p>
         </p>
         <p>
+            <h2>About my Server</h2>
+            <p>
+            <h3>Software</h3>
+            OS: NixOS <br>
+            Software its currently running: <br>
+            Nextcloud AIO <br>
+            My full Config: <a href="https://github.com/pilz0/server">github.com/pilz0/server</a> <br>
+            <h3>Hardware</h3>
+            <p>HP sff <br>
+                Intel i5 2400 <br>
+                16GB DDR3 <br>
+                2x2TB WD Red <br>
+                1G Networking (but after that 50/5mbit DSL sadly) <br>
+            </p>
+            </p>
+            </p>
+            </p>
+        <p>
         <h2>Social Media</h2>
         twitter:<a href="https://twitter.com/pilz1312">@pilz1312</a> <br>
         mastodon:<a href="https://kommunismus.social/@marie">@marie</a> <br>
