huh idk wat changed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <h1> Title lol :3 </h1>
+
 <body>
     <p>This is a minimal HTML page where some random stuff will be hosted/written</p>
 </body>
@@ -24,35 +25,39 @@
     Find a VPN Provider that is fine with Torrenting (eg. Mullvad, Airvpn, Proton etc...)<br>
     Install a VPN Client (OpenVPN, Wireguard, etc.) and config it for your VPN<br>
     Enable the qbittorrent search and install the <a>
-        <a href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search Plugins</a> <br>
-    Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN Interface
-    <br>
-    Done! Now you can download "linux ISOs" without any problems! <br>
-    <br>
-    </p>
-<p><h2> Why Static HTML??? use wordpress????????</h2></p>
-<p> Bloat=bad and also im to lazy :3</p>
-    <body>
-        <p>
-        <h2>About my Laptop</h2>
-        <p>
-        <h3>Software</h3>
-        OS: NixOS <br>
-        DE: Gnome <br>
-        Browser: Firefox <br>
-        Editor: vscode <br>
-        My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a> <br>
-        <h3>Hardware</h3>
-        <p>Framework Laptop 13 <br>
-            Intel i5-1240P <br>
-            16GB DDR4 <br>
-            1TB NVMe <br>
-            Pink Bezel <br>
-        </p>
-        </p>
-        </p>
+        <a href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search
+            Plugins</a> <br>
+        Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN Interface
+        <br>
+        Done! Now you can download "linux ISOs" without any problems! <br>
+        <br>
         </p>
         <p>
+            <h2> Why Static HTML??? use wordpress????????</h2>
+        </p>
+        <p> Bloat=bad and also im to lazy :3</p>
+
+        <body>
+            <p>
+            <h2>About my Laptop</h2>
+            <p>
+            <h3>Software</h3>
+            OS: NixOS <br>
+            DE: Gnome <br>
+            Browser: Firefox <br>
+            Editor: vscode <br>
+            My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a> <br>
+            <h3>Hardware</h3>
+            <p>Framework Laptop 13 <br>
+                Intel i5-1240P <br>
+                16GB DDR4 <br>
+                1TB NVMe <br>
+                Pink Bezel <br>
+            </p>
+            </p>
+            </p>
+            </p>
+            <p>
             <h2>About my Server</h2>
             <p>
             <h3>Software</h3>
@@ -70,36 +75,56 @@
             </p>
             </p>
             </p>
-        <p>
-        <h2>Social Media</h2>
-        twitter:<a href="https://twitter.com/pilz1312">@pilz1312</a> <br>
-        mastodon:<a href="https://kommunismus.social/@marie">@marie</a> <br>
-        </p>
-        <p>
-        <h2>
-            If you want to read smt:
-        </h2>
-        </p>
-        <p>
-            <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
-        </p>
-        <p>
-            <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
-            </a>
-        </p>
-        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
-        <p><h2>The shittyest and cheapest Statuspage</h2></p>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a957482c0" target="_blank" title="Weitere Statistiken für 64285-b_rowlan"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a957482c0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+            <p>
+            <h2>Social Media</h2>
+            twitter:<a href="https://twitter.com/pilz1312">@pilz1312</a> <br>
+            mastodon:<a href="https://kommunismus.social/@marie">@marie</a> <br>
+            </p>
+            <p>
+            <h2>
+                If you want to read smt:
+            </h2>
+            </p>
+            <p>
+                <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
+            </p>
+            <p>
+                <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
     </a>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=c4e984f607de" target="_blank" title="Weitere Statistiken für 64295-Linkstreff"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=c4e984f607de&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+    </p>
+    <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
+    <p>
+    <h2>The shittyest and cheapest Statuspage</h2>
+    </p>
+    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a957482c0"
+        target="_blank" title="Weitere Statistiken für 64285-b_rowlan"><img
+            src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a957482c0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350"
+            width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=fcecda15b3c6" target="_blank" title="Weitere Statistiken für 64289-oetingervilla3"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=fcecda15b3c6&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=c4e984f607de"
+        target="_blank" title="Weitere Statistiken für 64295-Linkstreff"><img
+            src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=c4e984f607de&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350"
+            width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a95749b68" target="_blank" title="Weitere Statistiken für 64289-oetingervilla4"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a95749b68&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=fcecda15b3c6"
+        target="_blank" title="Weitere Statistiken für 64289-oetingervilla3"><img
+            src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=fcecda15b3c6&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350"
+            width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=0c0e766d8bc0" target="_blank" title="Weitere Statistiken für 64289-oetingervilla-saal-PoE"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=0c0e766d8bc0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=a42a95749b68"
+        target="_blank" title="Weitere Statistiken für 64289-oetingervilla4"><img
+            src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=a42a95749b68&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350"
+            width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
-        <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=b8eca3e12daf" target="_blank" title="Weitere Statistiken für 64289-_ttingerVillaOutdoor______"><img src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=b8eca3e12daf&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350" width="650" height="350" alt="Clients graph (wird generiert)">
+    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=0c0e766d8bc0"
+        target="_blank" title="Weitere Statistiken für 64289-oetingervilla-saal-PoE"><img
+            src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=0c0e766d8bc0&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350"
+            width="650" height="350" alt="Clients graph (wird generiert)">
     </a>
-        <p>I hate electron</p> <br>
-    </body>
+    <a href="https://stats.darmstadt.freifunk.net/d/000000021/router-meshviewer-export?var-node=b8eca3e12daf"
+        target="_blank" title="Weitere Statistiken für 64289-_ttingerVillaOutdoor______"><img
+            src="https://stats.darmstadt.freifunk.net/render/d-solo/000000021/router-meshviewer-export?var-node=b8eca3e12daf&amp;panelId=1&amp;theme=light&amp;width=650&amp;height=350"
+            width="650" height="350" alt="Clients graph (wird generiert)">
+    </a>
+    <p>I hate electron</p> <br>
+</body>
