added linux skillicon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Skills</h2>
     </p>
     <p <a href="https://skillicons.dev">
-        <img src="https://skillicons.dev/icons?i=git,nix,windows" />
+        <img src="https://skillicons.dev/icons?i=git,nix,linux,windows" />
         </a>
     </p>
     <p>
