--- a/index.html
+++ b/index.html
@@ -104,4 +104,8 @@
                     src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/aolsucks.gif" width="200"
                     height="60">
             </a>
+            <a target="_blank" title="random img"><img
+                    src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/hicolors.webp" width="200"
+                    height="60">
+            </a>
 </body>
