added a shitty password guide

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         <br>
         </p>
         <p>
+            <h2>What is a good Password??????</h2>
+        </p>
+        <p>For normal People who dont do activism or are high value Tagets of the police or hackers three random words
+            should be enough, for all people who think they need more security four or five random words should be fine.
+        </p>
+        <p> Also anyone should use 2fa preferably with Passkeys or a <a href="https://www.yubico.com/">Yubikey</a> </p>
+        <p>If you have over 10 Passwords, use a Password Manager, i use <a
+                href="https://github.com/dani-garcia/vaultwarden">Vaultwarden</a> btw</p>
+        <p>
             <h2> Why Static HTML??? use wordpress????????</h2>
         </p>
         <p> Bloat=bad and also im to lazy :3</p>
@@ -95,7 +104,6 @@
     <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
     <p>
         <a>
-            <p>I hate electron</p> <br>
             <a target="_blank" title="random img"><img
                     src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/ApprehensiveRashAvians-max-1mb.gif"
                     width="200" height="60">
