--- a/index.html
+++ b/index.html
@@ -1,123 +1,128 @@
 <!DOCTYPE html>
-<h1> Title lol :3 </h1>
 
-<body>
-    <p>This is a minimal HTML page where some random stuff will be hosted/written</p>
-</body>
+<body style="background-color:#1e1e2e;">
+    <font color="#cdd6f4">
+        <h1> Title lol :3 </h1>
 
-<h2> Whoami</h2>
+        <p>This is a minimal HTML page where some random stuff will be hosted/written</p>
 
-<body>
-    <p>
-        <li>idk i dont even know who i am
-        </li>
-    </p>
-    <p>
-    <h2>Skills</h2>
-    </p>
-    <p <a href="https://skillicons.dev">
-        <img src="https://skillicons.dev/icons?i=git,nix,linux,windows" />
+        <h2> Whoami</h2>
+        <p>
+            <li>idk i dont even know who i am
+            </li>
+        </p>
+        <p>
+        <h2>Skills</h2>
+        </p>
+        <p <a href="https://skillicons.dev">
+            <img src="https://skillicons.dev/icons?i=git,nix,linux,windows" />
+            </a>
+        </p>
+        <p>
+        <h2>How to torrent "linux ISOs"</h2> <br>
+        Install <a href="https://www.qbittorrent.org/">qbittorrent</a> <br>
+        Find a VPN Provider that is fine with Torrenting (eg. Mullvad, Airvpn, Proton etc...)<br>
+        Install a VPN Client (OpenVPN, Wireguard, etc.) and config it for your VPN<br>
+        Enable the qbittorrent search and install the <a>
+            <a href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search
+                Plugins</a> <br>
+            Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN
+            Interface
+            <br>
+            Done! Now you can download "linux ISOs" without any problems! <br>
+            <br>
+            </p>
+            <p>
+                <h2>What is a good Password??????</h2>
+            </p>
+            <p>For normal People who dont do activism or are high value Tagets of the police or hackers three random
+                words
+                should be enough, for all people who think they need more security four or five random words should be
+                fine.
+            </p>
+            <p> Also anyone should use 2fa preferably with Passkeys or a <a href="https://www.yubico.com/">Yubikey</a>
+            </p>
+            <p>If you have over 10 Passwords, use a Password Manager, i use <a
+                    href="https://github.com/dani-garcia/vaultwarden">Vaultwarden</a> btw</p>
+            <p>
+                <h2> Why Static HTML??? use wordpress????????</h2>
+            </p>
+            <p> Bloat=bad and also im to lazy :3</p>
+
+            <body>
+                <p>
+                <h2>About my Laptop</h2>
+                <p>
+                <h3>Software</h3>
+                OS: NixOS <br>
+                DE: Gnome <br>
+                Browser: Firefox <br>
+                Editor: vscode <br>
+                My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a> <br>
+                <h3>Hardware</h3>
+                <p>Framework Laptop 13 <br>
+                    Intel i5-1240P <br>
+                    16GB DDR4 <br>
+                    1TB NVMe <br>
+                    Pink Bezel <br>
+                </p>
+                </p>
+                </p>
+                </p>
+                <p>
+                <h2>About my Server</h2>
+                <p>
+                <h3>Software</h3>
+                OS: NixOS <br>
+                Software its currently running: <br>
+                Nextcloud AIO <br>
+                My full Config: <a href="https://github.com/pilz0/server">github.com/pilz0/server</a> <br>
+                <h3>Hardware</h3>
+                <p>HP sff <br>
+                    Intel i5 2400 <br>
+                    16GB DDR3 <br>
+                    2x2TB WD Red <br>
+                    1G Networking (but after that 50/5mbit DSL sadly) <br>
+                </p>
+                </p>
+                </p>
+                </p>
+                <p>
+                <h2>Social Media</h2>
+                twitter:<a href="https://twitter.com/pilz1312">@pilz1312</a> <br>
+                mastodon:<a href="https://kommunismus.social/@marie">@marie</a> <br>
+                </p>
+                <p>
+                <h2>
+                    If you want to read smt:
+                </h2>
+                </p>
+                <p>
+                    <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
+                </p>
+                <p>
+                    <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
         </a>
-    </p>
-    <p>
-    <h2>How to torrent "linux ISOs"</h2> <br>
-    Install <a href="https://www.qbittorrent.org/">qbittorrent</a> <br>
-    Find a VPN Provider that is fine with Torrenting (eg. Mullvad, Airvpn, Proton etc...)<br>
-    Install a VPN Client (OpenVPN, Wireguard, etc.) and config it for your VPN<br>
-    Enable the qbittorrent search and install the <a>
-        <a href="https://github.com/qbittorrent/search-plugins/wiki/Unofficial-search-plugins">unoffical Search
-            Plugins</a> <br>
-        Open the qBittorrent app and go to Tools → Options… → Advanced → Network interface and select your VPN Interface
-        <br>
-        Done! Now you can download "linux ISOs" without any problems! <br>
-        <br>
         </p>
+        <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
         <p>
-            <h2>What is a good Password??????</h2>
-        </p>
-        <p>For normal People who dont do activism or are high value Tagets of the police or hackers three random words
-            should be enough, for all people who think they need more security four or five random words should be fine.
-        </p>
-        <p> Also anyone should use 2fa preferably with Passkeys or a <a href="https://www.yubico.com/">Yubikey</a> </p>
-        <p>If you have over 10 Passwords, use a Password Manager, i use <a
-                href="https://github.com/dani-garcia/vaultwarden">Vaultwarden</a> btw</p>
-        <p>
-            <h2> Why Static HTML??? use wordpress????????</h2>
-        </p>
-        <p> Bloat=bad and also im to lazy :3</p>
+            <a>
+                <a target="_blank" title="random img"><img
+                        src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/ApprehensiveRashAvians-max-1mb.gif"
+                        width="200" height="60">
+                </a>
+                <a target="_blank" title="random img"><img
+                        src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/aolsucks.gif" width="200"
+                        height="60">
+                </a>
+                <a target="_blank" title="random img"><img
+                        src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/hicolors.webp" width="200"
+                        height="60">
+                </a>
+                <a target="_blank" title="anti elecron"><img
+                        src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/elecron.png" width="200"
+                        height="60">
 
-        <body>
-            <p>
-            <h2>About my Laptop</h2>
-            <p>
-            <h3>Software</h3>
-            OS: NixOS <br>
-            DE: Gnome <br>
-            Browser: Firefox <br>
-            Editor: vscode <br>
-            My full Config: <a href="https://github.com/pilz0/laptop">github.com/pilz0/laptop</a> <br>
-            <h3>Hardware</h3>
-            <p>Framework Laptop 13 <br>
-                Intel i5-1240P <br>
-                16GB DDR4 <br>
-                1TB NVMe <br>
-                Pink Bezel <br>
-            </p>
-            </p>
-            </p>
-            </p>
-            <p>
-            <h2>About my Server</h2>
-            <p>
-            <h3>Software</h3>
-            OS: NixOS <br>
-            Software its currently running: <br>
-            Nextcloud AIO <br>
-            My full Config: <a href="https://github.com/pilz0/server">github.com/pilz0/server</a> <br>
-            <h3>Hardware</h3>
-            <p>HP sff <br>
-                Intel i5 2400 <br>
-                16GB DDR3 <br>
-                2x2TB WD Red <br>
-                1G Networking (but after that 50/5mbit DSL sadly) <br>
-            </p>
-            </p>
-            </p>
-            </p>
-            <p>
-            <h2>Social Media</h2>
-            twitter:<a href="https://twitter.com/pilz1312">@pilz1312</a> <br>
-            mastodon:<a href="https://kommunismus.social/@marie">@marie</a> <br>
-            </p>
-            <p>
-            <h2>
-                If you want to read smt:
-            </h2>
-            </p>
-            <p>
-                <a href="https://fckaf.de/N8A">Ted Kaczynskis mainfesto</a> </li>
-            </p>
-            <p>
-                <a href="https://fffutu.re/diyhrt">A Pad with Diyhrt Info</a></li>
-    </a>
-    </p>
-    <p>If you need/want to contact me: marie0[ätt(@)]riseup dot net</p><br>
-    <p>
-        <a>
-            <a target="_blank" title="random img"><img
-                    src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/ApprehensiveRashAvians-max-1mb.gif"
-                    width="200" height="60">
-            </a>
-            <a target="_blank" title="random img"><img
-                    src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/aolsucks.gif" width="200"
-                    height="60">
-            </a>
-            <a target="_blank" title="random img"><img
-                    src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/hicolors.webp" width="200"
-                    height="60">
-            </a>
-            <a target="_blank" title="anti elecron"><img
-                    src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/elecron.png" width="200"
-                    height="60">
-            </a>
+                </a>
+    </font>
 </body>
