added about desktop

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
                 </p>
                 </p>
                 </p>
+                <H2>About my Desktop</H2>
+                <p>
+                <h2>Software</h2>
+                </p>
+                <p>
+                    OS: Windows 11 Pro (maybe dualboot soon)<br>
+                </p>
+                <H3>Hardware</H3>
+                Intel i7 8700K <br>
+                16GB DDR4 <br>
+                RX 580 <br>
+                2x250gb SSD <br>
+                500gb HDD <br>
+                Fractal Design Define R5 <br>
                 <p>
                 <h2>About my Server</h2>
                 <p>
@@ -82,6 +96,7 @@
                     Intel i5 2400 <br>
                     16GB DDR3 <br>
                     2x2TB WD Red <br>
+                    Maybe soon a GTX 1060 <br>
                     1G Networking (but after that 50/5mbit DSL sadly) <br>
                 </p>
                 </p>
